force-app/main/default/objects/User/fields/Navigator_Expertise__c.field-meta.xml
<CustomField>
    <fullName>Navigator_Expertise__c</fullName>
    <label>Navigator Expertise</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B2C Commerce</fullName>
            </value>
            <value>
                <fullName>Commerce</fullName>
            </value>
            <value>
                <fullName>Customer 360 Platform</fullName>
            </value>
            <value>
                <fullName>Education Cloud</fullName>
            </value>
            <value>
                <fullName>Einstein Expert</fullName>
            </value>
            <value>
                <fullName>Experience Cloud</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
            <value>
                <fullName>Marketing Cloud</fullName>
            </value>
            <value>
                <fullName>Multi-Cloud Integration</fullName>
            </value>
            <value>
                <fullName>Nonprofit Cloud</fullName>
            </value>
            <value>
                <fullName>Revenue Cloud</fullName>
            </value>
            <value>
                <fullName>Sales Cloud</fullName>
            </value>
            <value>
                <fullName>Service Cloud</fullName>
            </value>
            <value>
                <fullName>Slack</fullName>
            </value>
            <value>
                <fullName>Industry Products</fullName>
            </value>
            <value>
                <fullName>Managed Services</fullName>
            </value>
            <value>
                <fullName>PDO/AppExchange</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>